--- a/controllers/index/index.htm
+++ b/controllers/index/index.htm
@@ -1,77 +1,175 @@
-<div class="header_proxy"></div>
+<div id="slides-collection">
+      <?php
+      $tempArr = [];
+      foreach ($fashionItems as $key => $item):
+        if(count($tempArr) < 2) {
+          $tempArr[] = $item;
+          continue;
+        }
+      ?>
+      <div class="slide ok">
+        <div class="left-half" style="background-image:url(<?= $tempArr[0]->feature_image->getPath() ?>);">
+          <div class="slide-content">
+            <h2><?= $tempArr[0]->title ?></h2>
+            <p>Aladdin, an urchin, falls in love with Princess Jasmine. He cannot marry her as she can only marry a prince.</p>
+          </div>
+        </div>
+        <div class="right-half" style="background-image: url(<?= $tempArr[1]->feature_image->getPath() ?>);">
+          <div class="slide-content">
+            <h2><?= $tempArr[1]->title ?></h2>
+            <p>Bolt is a dog who stars in a superhit television show in which he possesses superpowers. He believes his powers are for real.</p>
+          </div>
+        </div>
+      </div>
+    <?php
+      $tempArr = [];
+      endforeach;
+    ?>
+    <div id="nav">
+      <a href="#" class="next-slide"><i class="nc-icon nc-minimal-right"></i></a>
+      <a href="#" class="prev-slide"><i class="nc-icon nc-minimal-left"></i></a>
+    </div>
+</div>
+<!-- <div class="header_proxy"></div> -->
 <br/>
+<div class="container-fluid">
+    <dic class="row">
+        <div class="col-md-12">
+            <div class="nav-tabs-navigation under-lined">
+                <div class="container">
+                    <div class="nav-tabs-wrapper row">
+                        <ul id="tabs" class="nav nav-tabs technologies" role="tablist">
+                            <li class="nav-item mask">
+                                <a class="nav-link active" data-toggle="tab" href="#home" role="tab" aria-expanded="false">
+                                    <img src="https://www.creative-tim.com/assets/icon-html-e05de3f70999d3ce94b9804b7e298026.jpg" alt="Icon html">
+                                </a>
+                            </li>
+                            <li class="nav-item mask">
+                                <a class="nav-link" data-toggle="tab" href="#profile" role="tab" aria-expanded="false">
+                                    <img src="https://www.creative-tim.com/assets/icon-sass-31b996b6252dbd1dd9c349bee39a5b8b.jpg" alt="Icon sass">
+                                </a>
+                            </li>
+                            <li class="nav-item mask">
+                                <a class="nav-link" data-toggle="tab" href="#messages" role="tab" aria-expanded="true">
+                                    <img src="https://www.creative-tim.com/assets/icon-bootstrap-7cec419b71f47386f443bd3fbfef2f7c.jpg" alt="Icon bootstrap">
+                                </a>
+                            </li>
+                        </ul>
+                        <div class="technologies">
+                            <div class="mask">
+                                <img src="https://www.creative-tim.com/assets/icon-html-e05de3f70999d3ce94b9804b7e298026.jpg" alt="Icon html">
+                            </div>
+                            <div class="mask">
+                                <img src="https://www.creative-tim.com/assets/icon-sass-31b996b6252dbd1dd9c349bee39a5b8b.jpg" alt="Icon sass">
+                            </div>
+                            <div class="mask">
+                                <img src="https://www.creative-tim.com/assets/icon-bootstrap-7cec419b71f47386f443bd3fbfef2f7c.jpg" alt="Icon bootstrap">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="my-tab-content" class="tab-content text-center">
+                <div class="tab-pane active" id="home" role="tabpanel" aria-expanded="false">
+                    <div class="container main-items-grid">
+                        <div class="row">
+                            <div class="col-md-12 no-padding">
+
+                                <div class="card-columns-custom">
+                                    <?php
+                                        $specialTopic = ['some topic', 'oks'];
+                                     ?>
+                                    <?php foreach ($fashionItems as $key => $item): ?>
+                                        <?php
+                                            $p3 = (in_array($key + 1,[2,5]) ? true: false);
+
+                                        ?>
+                                        <?php
+                                            if($key !== 0 && $key%8 === 0 && count($specialTopic) > 0):
+                                            $topic = array_shift($specialTopic);
+                                        ?>
+                                            <div class="card text-center card-success card-inverse card-full">
+                                                <div class="card-block">
+                                                    <h4 class="card-title"><?= $topic ?></h4>
+                                                    <p class="card-text">
+                                                        <?php if($this->user): ?>
+                                                            And You are <?= $this->user->name ?> <?= $this->user->surname ?>
+                                                        <?php else: ?>
+                                                            And You are not logged in please login <a href="<?= Url::to('login') ?>">Login</a>
+                                                        <?php endif; ?>
+                                                    </p>
+                                                    <br />
+                                                    <button type="button" class="btn btn-outline-neutral btn-round">Goooo ! &nbsp; &gt;</button>
+                                                </div>
+                                            </div>
+                                        <?php endif; ?>
+                                        <div class="card card-blog <?= $p3 ? 'card card-inverse card-success p-3 text-center' : ''?>">
+
+                                            <?php if(!$p3): ?>
+
+                                                <?php if($item->feature_image): ?>
+                                                <div class="card-image" style="background-image:url(<?= $item->feature_image->getThumb(274, 197, ['mode' => 'crop']) ?>)">
+                                                <?php else: ?>
+                                                <div class="card-image" style="background-image:url(http://placehold.it/400x400) ?>)">
+                                                <?php endif; ?>
+                                                    <div class="item-info">
+                                                        <h4 class="card-title"><?= $key + 1 ?>. <?= $item->title ?> </h4>
+                                                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                                    </div>
+                                                </div>
+                                                <!-- <div class="card-block">
+                                                  <h4 class="card-title"><?= $key + 1 ?>. <?= $item->title ?> </h4>
+                                                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                                </div> -->
+                                                <div class="card-footer">
+                                                  <small class="text-muted">Last updated 3 mins ago</small>
+                                                  <span class="text-center">
+                                                    <a href="<?= URL::to('details/' . $item->slug) ?>" class="btn btn-outline-success btn-round btn-sm">more &nbsp; &gt;</a>
+                                                  <span>
+                                                </div>
+                                            <?php else: ?>
+                                                <div class="card-block card-blockquote">
+                                                    <div class="content-msg">
+                                                        <h4 class="card-title"><?= $key + 1 ?>. <?= $item->title ?></h4>
+                                                        <div class="info">
+                                                            <div>
+                                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+                                                            </div>
+                                                            <div class="info-footer">
+                                                                <small class="">
+                                                                    Someone famous in <cite title="Source Title">Source Title</cite>
+                                                                </small></br>
+                                                                <small class="">Last updated 3 mins ago</small>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="card-footer-plain">
+                                                        <span class="text-center">
+                                                            <button type="button" class="btn btn-outline-neutral btn-round btn-sm">more &nbsp; &gt;</button>
+                                                        <span>
+                                                    </div>
+                                                </div>
+                                            <?php endif; ?>
+                                        </div>
+                                    <?php endforeach; ?>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane" id="profile" role="tabpanel" aria-expanded="false">
+                    <p>Here is your profile.</p>
+                </div>
+                <div class="tab-pane" id="messages" role="tabpanel" aria-expanded="true">
+                    <p>Here are your messages.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <!-- <div class="page-header page-header-xs"
     style="background-image: url(assets/static/img/pexels-photo-371095.jpeg);">
     <div class="filter"></div>
 </div> -->
 
-<div class="container-fluid main-items-grid">
-    <div class="col-md-12">
-
-        <div class="card-columns">
-            <?php foreach ($fashionItems as $key => $item): ?>
-                <?php
-                    $p3 = (in_array($key + 1,[]) ? true: false);
-                ?>
-                <div class="card card-blog <?= $p3 ? 'card card-inverse card-success p-3 text-center' : ''?>">
-
-                    <?php if(!$p3): ?>
-
-                        <div class="card-image">
-                            <?php if($item->feature_image): ?>
-                                <img src="<?= $item->feature_image->getThumb(400, 400, ['mode' => 'landscape']) ?>" alt="Circle Image" class="card-img-top img-fluid">
-                            <?php else: ?>
-                                <img src="http://placehold.it/400x400" alt="Circle Image" class="card-img-top img-fluid">
-                            <?php endif; ?>
-                        </div>
-                        <div class="card-block">
-                          <h4 class="card-title"><?= $key + 1 ?>. <?= $item->title ?> </h4>
-                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                        </div>
-                        <div class="card-footer">
-                          <small class="text-muted">Last updated 3 mins ago</small>
-                          <span class="text-center">
-                            <a href="<?= URL::to('details/' . $item->slug) ?>" class="btn btn-outline-success btn-round">more &nbsp; &gt;</a>
-                          <span>
-                        </div>
-
-                    <?php else: ?>
-
-                        <blockquote class="card-block card-blockquote">
-                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                          <footer>
-                            <small class="">
-                              Someone famous in <cite title="Source Title">Source Title</cite>
-                            </small>
-                            <br/><br/>
-                            <div class="card-footer">
-                              <small class="">Last updated 3 mins ago</small>
-                              <span class="text-center">
-                                <button type="button" class="btn btn-outline-neutral btn-round"><?= $key + 1 ?>. <?= $item->title ?> &nbsp; &gt;</button>
-                              <span>
-                            </div>
-                          </footer>
-                        </blockquote>
-
-
-                    <?php endif; ?>
-                </div>
-            <?php endforeach; ?>
-        </div>
-        <div class="card text-center card-success card-inverse">
-            <div class="card-block">
-                <h4 class="card-title">Special title treatment</h4>
-                <p class="card-text">
-                    <?php if($this->user): ?>
-                        And You are <?= $this->user->name ?> <?= $this->user->surname ?>
-                    <?php else: ?>
-                        And You are not logged in please login <a href="<?= Url::to('login') ?>">Login</a>
-                    <?php endif; ?>
-                </p>
-                <br />
-                <button type="button" class="btn btn-outline-neutral btn-round">Goooo ! &nbsp; &gt;</button>
-            </div>
-        </div>
-    </div>
-</div>
