--- a/controllers/fashion/index.htm
+++ b/controllers/fashion/index.htm
@@ -1,56 +1,160 @@
-<div class="details-image" style="background-image:url(<?= $item->feature_image->getPath() ?>)">
-
-</div>
-
-
-<div class="container">
+<div class="details-image" style="background-image:url(<?= $item->feature_image->getPath() ?>)"></div>
+<br/>
+<div class="container col-md-10">
     <div class="row">
-        <div class="col-md-8 offset-2">
-            <div class="tim-title">
-                <h3> <?= $item->title ?></h3>
-                <br>
+        <div class="col-md-6 iamge-details-left">
+            <div class="iamge-details">
+                <img class="img-fluid" src="<?= $item->feature_image->getPath() ?>" />
             </div>
-            <div class="progress">
-                <div class="progress-bar progress-bar-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-            </div><br>
-            <div class="progress">
-                <div class="progress-bar progress-bar-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-            </div><br>
-            <div class="progress">
-                <div class="progress-bar progress-bar-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-            </div><br>
-            <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
-                <div class="progress-bar progress-bar-success" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-                <div class="progress-bar progress-bar-warning" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="info-shares-container">
+                <div class="info-shares poster-user-avatar pull-left">
+                    <img class="img-fluid" src="<?= $item->feature_image->getThumb(48, 48, ['mode' => 'crop', 'extension' => 'png']) ?>" />
+                    <div class="posted-details">
+                        <small>Posted By</small>
+                        <small><a href="javascript:;">Hardik Satasiya</a></small>
+                        <small>20 mins ago</small>
+                    </div>
+                </div>
+
+                <div class="info-shares pull-right">
+                    <a class="info-share-btns text-warning clicking" href="javascript:;">
+                        <i class="fa fa-eye fa-2x " aria-hidden="true"></i>
+                        <span> 40 views </span>
+                    </a>
+                    <a class="info-share-btns text-success clicking" href="javascript:;">
+                        <i class="fa fa-thumbs-o-up fa-2x "></i>
+                        <span> 40 likes </span>
+                    </a>
+                    <a class="info-share-btns text-danger clicking" href="javascript:;">
+                        <i class="fa fa-heart fa-2x "></i>
+                        <span> 40 saved </span>
+                    </a>
+                    <a class="info-share-btns clicking" href="javascript:;">
+                        <i class="fa fa-share-alt fa-2x"></i>
+                        <span> Share </span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 buy-details">
+            <div class="upper-info row">
+                <div class="col-md-12 col-sm-6">
+                    <h3 class="no-margin"> <?= $item->title ?></h3>
+                    <h4 class="no-margin"> Sub title </h4>
+                    <small>Sold By <a href="javascript:;"> Amazon </a> </small>
+                    <div class="rating-stars">
+                        <div class="rating-input">
+                            <span class="fa fa-star fa-full ticked" data-value="1"></span>
+                            <span class="fa fa-star fa-full ticked" data-value="2"></span>
+                            <span class="fa fa-star fa-full ticked" data-value="3"></span>
+                            <span class="fa fa-star fa-full ticked" data-value="4"></span>
+                            <span class="fa fa-star fa-full" data-value="5"></span>
+                            <input type="hidden" name="" value="5" id=""></div>
+                            <div class="aggregate-rating">
+                                <span itemprop="ratingValue">4.00</span>/5
+                                <a href="javascript:;">(<span itemprop="reviewCount">28</span> Reviews)</a>
+                            </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6">
+                    <div class="buy-now">
+                        <div class="prising">
+                            <div class="prising-old">
+                                <del><h4>Rs. 999</h4></del>
+                            </div>
+                            <div class="prising-new">
+                                <h3 class="no-margin">Rs. 299</h3>
+                            </div>
+                        </div>
+
+                        <button type="button" class="btn btn-outline-success btn-round"> <i class="fa fa-shopping-cart"></i> Buy Now !</button>
+                    </div>
+                </div>
+
+                <div class="col-md-8 col-sm-12">
+                    <div class="tranding">
+                        <h3 class="">Tranding</h3>
+                        <br/>
+                        <div class="row voter">
+                            <div class="col-md-10 col-sm-11 progress-container">
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-1 col-sm-1">
+                                <a class="text-success" href="javascript:;"><i class="fa fa-thumbs-o-up fa-2x clicking"></i></a>
+                            </div>
+                        </div>
+                        <div class="row voter">
+                            <div class="col-md-10 col-sm-11 progress-container">
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-danger" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-1 col-sm-1">
+                                <a class="text-danger" href="javascript:;"><i class="fa fa-thumbs-o-down fa-2x clicking"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <h4 class=""> Look there is more </h4>
+            <div class="similar-fashion">
+                <div class="item-info">
+                    <img class="img-fluid" src="<?= $item->feature_image->getThumb(78, 64, ['mode' => 'crop', 'extension' => 'png']) ?>" />
+                    <a href="javascript:;"><small> Good Title </small></a>
+                </div>
+                <div class="item-info">
+                    <img class="img-fluid" src="<?= $item->feature_image->getThumb(78, 64, ['mode' => 'crop', 'extension' => 'png']) ?>" />
+                    <a href="javascript:;"><small> Good Title </small></a>
+                </div>
+                <div class="item-info">
+                    <img class="img-fluid" src="<?= $item->feature_image->getThumb(78, 64, ['mode' => 'crop', 'extension' => 'png']) ?>" />
+                    <a href="javascript:;"><small> Good Title </small></a>
+                </div>
+                <div class="item-info">
+                    <img class="img-fluid" src="<?= $item->feature_image->getThumb(78, 64, ['mode' => 'crop', 'extension' => 'png']) ?>" />
+                    <a href="javascript:;"><small> Good Title </small></a>
+                </div>
+                <div class="item-info">
+                    <img class="img-fluid" src="<?= $item->feature_image->getThumb(78, 64, ['mode' => 'crop', 'extension' => 'png']) ?>" />
+                    <a href="javascript:;"><small> Good Title </small></a>
+                </div>
+                <div class="item-info">
+                    <img class="img-fluid" src="<?= $item->feature_image->getThumb(78, 64, ['mode' => 'crop', 'extension' => 'png']) ?>" />
+                    <a href="javascript:;"><small> Good Title </small></a>
+                </div>
             </div>
         </div>
     </div>
 
     <br/>
-    <div class="row">
-        <div class="col-md-8 offset-2">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque dolores ipsum libero ipsa molestiae maxime hic autem praesentium, ullam accusamus, ut quia sunt asperiores, architecto ratione. Eligendi neque perferendis, tenetur ea ab cumque molestias iste quae, aliquam, a magni rem recusandae culpa illum, natus sapiente pariatur explicabo voluptates minus. Iste recusandae fuga optio laboriosam quis, exercitationem libero tempore repellat beatae blanditiis nesciunt repellendus, ratione dolores vitae quod facilis esse veritatis, sapiente. Earum corporis omnis fugit, hic perferendis vero at dolores delectus ducimus possimus velit ea optio, neque architecto expedita dolor. Error, consequuntur illo animi aliquid. Aliquam harum autem iusto vel.
-        </div>
+
+
+    <br>
+
+    <div class="text-justify">
+        &nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque dolores ipsum libero ipsa molestiae maxime hic autem praesentium, ullam accusamus,
+        ut quia sunt asperiores, architecto ratione. Eligendi neque perferendis, tenetur ea ab cumque molestias iste quae, aliquam, a magni rem recusandae culpa illum, natus sapiente pariatur explicabo voluptates minus. Iste recusandae fuga optio laboriosam quis, exercitationem libero tempore repellat beatae blanditiis nesciunt repellendus, ratione dolores vitae quod facilis esse veritatis, sapiente. Earum corporis omnis fugit, hic perferendis vero at dolores delectus ducimus possimus velit ea optio, neque architecto expedita dolor. Error, consequuntur illo animi aliquid. Aliquam harum autem iusto vel.
     </div>
+
+    <blockquote class="blockquote">
+        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+        <footer class="blockquote-footer">Someone famous in <cite title="source Title">Source Title</cite></footer>
+    </blockquote>
     <br/>
 
-    <div class="row">
-        <div class="col-md-8 offset-2">
-            <blockquote class="blockquote">
-                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                <footer class="blockquote-footer">Someone famous in <cite title="source Title">Source Title</cite></footer>
-            </blockquote>
-        </div>
-    </div>
-    <br/>
-
-    <div class="row">
-        <div class="col-md-2 offset-2">
+    <div>
+        <div class="pull-left">
             <a href="http://fashionhub.local.com/fashion/night-owl" class="btn btn-outline-success btn-round">&lt; &nbsp; previous</a>
         </div>
 
-        <div class="col-md-2 offset-4">
+        <div class="pull-right">
             <a href="http://fashionhub.local.com/fashion/night-owl" class="pull-right btn btn-outline-success btn-round">more &nbsp; &gt;</a>
         </div>
     </div>
